# regiment

./: .gitmodules  README.md  ambiata-regiment.cabal  ambiata-regiment.lock-7.10.2  ambiata-regiment.lock-8.0.1  boris-git.toml  boris.toml  master.toml  project.cabal
doc/: performance-notes.md  temp-file-format.md
main/: project.hs  regiment.hs
src/: Regiment.hs
src/Regiment/: Data.hs  IO.hs  Merge.hs  Parse.hs  Serial.hs  Vanguard.hs
src/Regiment/Vanguard/: Base.hs  IO.hs  List.hs
test/: test-cli.hs  test-io.hs  test.hs
test/Test/IO/Regiment/: IO.hs  Merge.hs
test/Test/Regiment/: Arbitrary.hs  Data.hs
test/Test/Regiment/Vanguard/: List.hs
test/cli/basic-usage/: run
test/cli/core/: setup.sh
test/cli/core/flow/: run
