name:                  ambiata-regiment
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              regiment
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           regiment

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-aqueduct
                    , ambiata-p
                    , ambiata-parsley
                    , ambiata-x-eithert
                    , bytestring                      == 0.10.*
                    , text                            == 1.2.*

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Paths_ambiata_regiment
                    Regiment
                    Regiment.Data
                    Regiment.Parse
                    Regiment.IO

executable regiment
  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    gen

  main-is:
                    ../main/regiment.hs

  build-depends:
                      base
                    , ambiata-regiment
                    , ambiata-p
                    , ambiata-x-attoparsec
                    , ambiata-x-eithert
                    , ambiata-x-optparse
                    , attoparsec                      == 0.13.*
                    , optparse-applicative            == 0.11.*
                    , text


test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-p
                    , ambiata-parsley
                    , ambiata-regiment
                    , QuickCheck                      >= 2.8.2 && < 2.9
                    , quickcheck-instances            == 0.3.*

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-regiment
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-p
                    , text
                    , QuickCheck                      >= 2.8.2 && < 2.9
                    , quickcheck-instances            == 0.3.*

test-suite test-cli
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-cli.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-regiment
                    , ambiata-disorder-core
