name:                  ambiata-regiment
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              regiment
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           regiment

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-aqueduct
                    , ambiata-p
                    , ambiata-parsley
                    , ambiata-x-eithert
                    , ambiata-x-vector
                    , binary                          >= 0.7        && < 0.9
                    , bytestring                      == 0.10.*
                    , directory                       == 1.2.*
                    , filepath                        == 1.3.*
                    , primitive                       == 0.6.*
                    , resourcet                       == 1.1.*
                    , text                            == 1.2.*
                    , transformers                    >= 0.4        && < 0.6
                    , vector                          >= 0.10       && < 0.12
                    , vector-algorithms               == 0.7.*

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Paths_ambiata_regiment
                    Regiment
                    Regiment.Data
                    Regiment.Parse
                    Regiment.IO
                    Regiment.Vanguard.Base
                    Regiment.Vanguard.IO
                    Regiment.Vanguard.List

executable regiment
  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    gen

  main-is:
                    ../main/regiment.hs

  build-depends:
                      base
                    , ambiata-regiment
                    , ambiata-p
                    , ambiata-x-attoparsec
                    , ambiata-x-eithert
                    , ambiata-x-optparse
                    , attoparsec                      == 0.13.*
                    , optparse-applicative            == 0.11.*
                    , text


test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-disorder-jack
                    , ambiata-p
                    , ambiata-parsley
                    , ambiata-regiment
                    , bytestring                      == 0.10.*
                    , primitive                       == 0.6.*
                    , QuickCheck                      >= 2.8.2 && < 2.9
                    , quickcheck-instances            == 0.3.*
                    , temporary
                    , vector                          >= 0.10       && < 0.12

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-regiment
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-disorder-jack
                    , ambiata-p
                    , ambiata-x-eithert
                    , binary                          >= 0.7        && < 0.9
                    , bytestring                      == 0.10.*
                    , filepath                        == 1.3.*
                    , resourcet                       == 1.1.*
                    , temporary                       == 1.2.*
                    , text
                    , transformers                    >= 0.4        && < 0.6
                    , QuickCheck                      >= 2.8.2 && < 2.9
                    , quickcheck-instances            == 0.3.*
                    , vector                          >= 0.10       && < 0.12


test-suite test-cli
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-cli.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-regiment
                    , ambiata-disorder-core
